// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletAssetDetails.vue should be rendered correctly 1`] = `
<wallet-base-stub
  showback="true"
  showheader="true"
  title="SORA"
  tooltip=""
>
   
  <s-card-stub
    borderradius="small"
    class="asset-details"
    primary="true"
    shadow="never"
    size="medium"
    status="default"
    usedesignsystem="true"
  >
    <div
      class="asset-details-container s-flex"
    >
      <token-logo-stub
        size="bigger"
        token="[object Object]"
        tokensymbol=""
      />
       
      <div
        class="asset-details-balance d2 asset-details-balance--clickable"
        style="font-size: 30px;"
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          fontsizerate="small"
          fontweightrate="normal"
          symbolasdecimal="true"
          value="123.4"
          valuecanbehidden="true"
        >
          <s-icon-stub
            name="chevron-down-rounded-16"
            size="18"
          />
        </formatted-amount-stub>
      </div>
       
      <formatted-amount-stub
        assetsymbol=""
        fontsizerate="medium"
        fontweightrate="normal"
        isfiatvalue="true"
        value="151.782"
        valuecanbehidden="true"
      />
       
      <div
        class="asset-details-actions"
      >
        <s-button-stub
          borderradius="small"
          class="asset-details-action send"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Send"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="finance-send-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action swap"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Swap"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="arrows-swap-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action liquidity"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Add liquidity"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="basic-drop-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action bridge"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Bridge"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="grid-block-distribute-vertically-24"
            size="28"
          />
        </s-button-stub>
         
        <qr-code-scan-button-stub
          primary=""
        />
         
        <s-button-stub
          borderradius="small"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Receive"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="finance-receive-show-QR-24"
            size="28"
          />
        </s-button-stub>
      </div>
       
      <transition-stub
        name="fadeHeight"
      >
        <!---->
      </transition-stub>
    </div>
  </s-card-stub>
   
  <!---->
   
  <wallet-history-stub
    asset="[object Object]"
  />
   
  <wallet-transaction-details-stub />
</wallet-base-stub>
`;

exports[`WalletAssetDetails.vue should show detailed balance info when button clicked 1`] = `
<wallet-base-stub
  showback="true"
  showheader="true"
  title="SORA"
  tooltip=""
>
   
  <s-card-stub
    borderradius="small"
    class="asset-details"
    primary="true"
    shadow="never"
    size="medium"
    status="default"
    usedesignsystem="true"
  >
    <div
      class="asset-details-container s-flex"
    >
      <token-logo-stub
        size="bigger"
        token="[object Object]"
        tokensymbol=""
      />
       
      <div
        class="asset-details-balance d2 asset-details-balance--clickable asset-details-balance--clicked"
        style="font-size: 30px;"
      >
        <formatted-amount-stub
          assetsymbol="XOR"
          fontsizerate="small"
          fontweightrate="normal"
          symbolasdecimal="true"
          value="123.4"
          valuecanbehidden="true"
        >
          <s-icon-stub
            name="chevron-down-rounded-16"
            size="18"
          />
        </formatted-amount-stub>
      </div>
       
      <formatted-amount-stub
        assetsymbol=""
        fontsizerate="medium"
        fontweightrate="normal"
        isfiatvalue="true"
        value="151.782"
        valuecanbehidden="true"
      />
       
      <div
        class="asset-details-actions"
      >
        <s-button-stub
          borderradius="small"
          class="asset-details-action send"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Send"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="finance-send-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action swap"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Swap"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="arrows-swap-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action liquidity"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Add liquidity"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="basic-drop-24"
            size="28"
          />
        </s-button-stub>
        <s-button-stub
          borderradius="small"
          class="asset-details-action bridge"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Bridge"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="grid-block-distribute-vertically-24"
            size="28"
          />
        </s-button-stub>
         
        <qr-code-scan-button-stub
          primary=""
        />
         
        <s-button-stub
          borderradius="small"
          icon=""
          iconposition="left"
          nativetype="button"
          primary="true"
          rounded="true"
          size="medium"
          tabindex="0"
          tooltip="Receive"
          tooltipplacement="top"
          type="action"
          usedesignsystem="true"
        >
          <s-icon-stub
            name="finance-receive-show-QR-24"
            size="28"
          />
        </s-button-stub>
      </div>
       
      <transition-stub
        name="fadeHeight"
      >
        <div
          class="asset-details-balance-info"
        >
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label"
            >
              Transferable
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="151.782"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="123.4"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label"
            >
              Frozen
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="0"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="0"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label"
            >
               - Locked
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="0"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="0"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label"
            >
               - Reserved
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="0"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="0"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label"
            >
              Bonded
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="0"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="0"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
           
          <div
            class="balance s-flex p4"
          >
            <div
              class="balance-label balance-label--total"
            >
              Total
            </div>
             
            <formatted-amount-with-fiat-value-stub
              assetsymbol="XOR"
              fiatfontsizerate="normal"
              fiatfontweightrate="normal"
              fiatformatasvalue="true"
              fiatvalue="151.782"
              fontsizerate="medium"
              fontweightrate="small"
              hasfiatvalue="true"
              value="123.4"
              valuecanbehidden="true"
              valueclass="balance-value"
              withleftshift="true"
            />
          </div>
        </div>
      </transition-stub>
    </div>
  </s-card-stub>
   
  <!---->
   
  <wallet-history-stub
    asset="[object Object]"
  />
   
  <wallet-transaction-details-stub />
</wallet-base-stub>
`;
